@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900207
+MANIFEST for ded, version t19900208
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
